installdir = $(pkgdatadir)/extensions

dist_install_DATA = \
	7z.png \
	cfg.png \
	directory.png \
	doc.png \
	file.png \
	html.png \
	ipk.png \
	iso.png \
	link.png \
	link-arrow.png \
	link_arrow.png \
	link_error.png \
	lock_off.png \
	lock_on.png \
	log.png \
	lst.png
	movie.png \
	music.png \
	picture.png \
	playlist.png \
	py.png \
	pyc.png \
	rar.png \
	sh.png \
	tar.png \
	txt.png \
	xml.png \
	zip.png
