installdir = $(datadir)/enigma2/skin_default/icons

dist_install_DATA =     ask.png \
    az.png \
    backward_large.png \
    backward.png \
    blank.png \
    bullet.png \
    clock.png \
    default.png \
    dmm_logo.png \
    dish_scan.png \
    dish.png \
    dev_usbstick.png \
    dev_mmc.png \
    dev_hdd.png \
    DVI.png \
    epgclock_add.png \
    epgclock_autotimer.png \
    epgclock_icetv.png \
    epgclock_post.png \
    epgclock_pre.png \
    epgclock_prepost.png \
    epgclock_primetime.png \
    epgclock_selpost.png \
    epgclock_selpre.png \
    epgclock_selprepost.png \
    epgclock_zap.png \
    epgclock_zaprec.png \
    epgclock.png \
    expandable-plugins.png \
    expandable.png \
    expanded.png \
    expanded-plugins.png \
    faz.png \
    folder.png \
    forward_large.png \
    forward.png \
    fza.png \
    hdd.png \
    hdd24.png \
    HDMI.png \
    ico_dvb-c.png \
    ico_dvb-s.png \
    ico_dvb-t.png \
    ico_event.png \
    ico_folder.png \
    ico_hbbtv_off.png \
    ico_hbbtv_on.png \
    ico_mp_forward.png \
    ico_mp_pause.png \
    ico_mp_play.png \
    ico_mp_rewind.png \
    ico_mp_stop.png \
    ico_noreplay.png \
    icons_off.png \
    ico_player.png \
    ico_replay.png \
    ico_service_group.png \
    ico_sub_off.png \
    ico_sub_on.png \
    ico_view.png \
    icon_view.png \
    icon_crypt_off.png \
    icon_crypt.png \
    icon_dolby_off.png \
    icon_dolby.png \
    icon_event.png \
    icon_format_off.png \
    icon_format.png \
    icon_hd_off.png \
    icon_hd_on.png \
    icon_rec_off.png \
    icon_rec.png \
    ico_stream.png \
    ico_stream_off.png \
    icon_txt_off.png \
    icon_txt.png \
    icon_stableupdate.png \
    icon_unstableupdate.png \
    icon_update_off.png \
    update_off.png \
    update_stable.png \
    update_unstable.png \
    input_error.png \
    input_info.png \
    input_keyboard-configured.png \
    input_keyboard.png \
    input_message.png \
    input_mouse-configured.png \
    input_mouse.png \
    input_question.png \
    input_rcnew-configured.png \
    input_rcnew.png \
    input_rcold-configured.png \
    input_rcold.png \
    input_warning.png \
    lcd_DVI.png \
    lcd_HDMI.png \
    lcd_Scart.png \
    lcd_YPbPr.png \
    lock_error.png \
    lock_off.png \
    lock_on.png \
    lock.png \
    lockBouquet.png \
    loop.png \
    marker.png \
    mark_on.png \
    mark_off.png \
    menu_download.png \
    menu_on.png \
    menu_off.png \
    movie_play_rec.png \
    movie_play.png \
    movielist.png \
    mp_buttons.png \
    mp_wb_buttons.png \
    NcamLogo.png \
    network_wired-active.png \
    network_wired-inactive.png \
    network_wired.png \
    network_wireless-active.png \
    network_wireless-inactive.png \
    network_wireless.png \
    newtop.png \
    OscamLogo.png \
    oldtop.png \
    part_0_4.png \
    part_1_4.png \
    part_2_4.png \
    part_3_4.png \
    part_4_4.png \
    part_new.png \
    part_unwatched.png \
    pause_large.png \
    pause.png \
    pic_frame.png \
    play_large.png \
    play.png \
    playlist.png \
    playlistquit.png \
    plugin.png \
    plugin_vertical.png \
    plugin_expanded.png \
    plugin_expandable.png \
    quit.png \
    rass_logo.png \
    rass_page1.png \
    rass_page2.png \
    rass_page3.png \
    rass_page4.png \
    RCA.png \
    record.png \
    redx.png \
    rep.png \
    scan-c.png \
    scan-s.png \
    scan-t.png \
    Scart-YPbPr.png \
    Scart.png \
    shuffle.png \
    slow_large.png \
    slow.png \
    stop_large.png \
    stop.png \
    timer_autotimer.png \
    timer_done.png \
    timer_failed.png \
    timer_icetv.png \
    timer_off.png \
    timer_prep.png \
    timer_rec.png \
    timer_rep.png \
    timer_wait.png \
    timer_zap.png \
    trashcan.png \
    unhandled-key-night.png \
    unhandled-key.png \
    unlock.png \
    unlockBouquet.png \
    verticalline.png \
    verticalline-plugins.png \
    YPbPr.png \
    za.png \
    install.png \
    installed.png \
    installable.png \
    remove.png \
    upgrade.png \
    upgradeable.png \
    traffic_off.png \
    traffic_red.png \
    traffic_green.png \
    traffic_yellow.png \
    repeat_off.png \
    selectioncross.png \
    stream.png \
    stream24.png \
    ico_dvb_c-fs8.png \
    ico_dvb_s-fs8.png \
    ico_dvb_t-fs8.png \
    ico_service_group-fs8.png \
    ico_stream-fs8.png \
    plilogo-fs8.png \
    cutting.svg \
    epgclock.svg \
    epgclock_add.svg \
    epgclock_pre.svg \
    epgclock_prepost.svg \
    input_error.svg \
    input_info.svg \
    input_message.svg \
    input_question.svg \
    input_warning.svg \
    part_0_4.svg \
    part_1_4.svg \
    part_2_4.svg \
    part_3_4.svg \
    part_4_4.svg \
    part_new.svg \
    part_unwatched.svg \
    pipclock.svg \
    pipclock_add.svg \
    pipclock_post.svg \
    pipclock_pre.svg \
    pipclock_prepost.svg \
    repepgclock.svg \
    repepgclock_add.svg \
    repepgclock_post.svg \
    repepgclock_pre.svg \
    repepgclock_prepost.svg \
    repzapclock.svg \
    repzapclock_add.svg \
    repzapclock_post.svg \
    repzapclock_pre.svg \
    repzapclock_prepost.svg \
    repzaprecclock.svg \
    repzaprecclock_add.svg \
    repzaprecclock_post.svg \
    repzaprecclock_pre.svg \
    repzaprecclock_prepost.svg \
    SwapManager.png \
    timer_autotimer.svg \
    timer_done.svg \
    timer_off.svg \
    timer_prep.svg \
    timer_rec.svg \
    timer_rep.svg \
    timer_wait.svg \
    timer_zap.svg \
    zapclock.svg \
    zapclock_add.svg \
    zapclock_post.svg \
    zapclock_pre.svg \
    zapclock_prepost.svg \
    zaprecclock.svg \
    zaprecclock_add.svg \
    zaprecclock_post.svg \
    zaprecclock_pre.svg \
    zaprecclock_prepost.svg
